default/objects/E2E_Data_Log__c/E2E_Data_Log__c.object-meta.xml
<CustomObject>
    <label>E2E Data Log</label>
    <nameField>
        <label>E2E Data Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E Data Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>