default/objects/E2E_Data_Log__c/fields/E2E_Data_Object__c.field-meta.xml
<CustomField>
    <fullName>E2E_Data_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E2E Data Object</label>
    <referenceTo>E2E_Data_Object__c</referenceTo>
    <relationshipLabel>E2E Data Logs</relationshipLabel>
    <relationshipName>E2E_Data_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>