default/objects/E2E_Data_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>