default/objects/E2E_Data_Log__c/fields/Exception_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Description__c</fullName>
    <label>Exception Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>