default/objects/E2E_Data_Log__c/fields/Exception_Source__c.field-meta.xml
<CustomField>
    <fullName>Exception_Source__c</fullName>
    <label>Exception Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>Frontend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>