default/objects/E2E_Data_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Process Error</fullName>
            </value>
            <value>
                <fullName>Credit Logic</fullName>
            </value>
            <value>
                <fullName>CF System Error</fullName>
            </value>
            <value>
                <fullName>Company search</fullName>
            </value>
            <value>
                <fullName>Credit Factory Error</fullName>
                <isActive>false</isActive>
                <label>Credit Factory Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>