default/objects/E2E_Data_Log__c/fields/Feedback_English__c.field-meta.xml
<CustomField>
    <fullName>Feedback_English__c</fullName>
    <label>Feedback (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>