default/objects/E2E_Data_Log__c/fields/Feedback_Local__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Local__c</fullName>
    <label>Feedback (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>