default/objects/E2E_Data_Log__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>