default/objects/E2E_Data_Log__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>