default/objects/E2E_Data_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Report Requested</fullName>
            </value>
            <value>
                <fullName>Report Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>