default/objects/E2E_Data_Log__c/recordTypes/Customer_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Customer_Feedback</fullName>
    <active>true</active>
    <label>Customer Feedback</label>
</RecordType>