default/objects/E2E_Data_Log__c/recordTypes/Exception.recordType-meta.xml
<RecordType>
    <fullName>Exception</fullName>
    <active>true</active>
    <label>Exception</label>
</RecordType>