default/objects/E2E_Data_Log__c/recordTypes/Job_Status.recordType-meta.xml
<RecordType>
    <fullName>Job_Status</fullName>
    <active>true</active>
    <label>Job Status</label>
</RecordType>