default/objects/E2E_Data_Log__c/recordTypes/Request_Status.recordType-meta.xml
<RecordType>
    <fullName>Request_Status</fullName>
    <active>true</active>
    <label>Request Status</label>
</RecordType>